--- a/react-product-list/src/components/CategoryList.css
+++ b/react-product-list/src/components/CategoryList.css
@@ -19,3 +19,14 @@ button.selected {
     color: #333;
 
 }
+
+button > span {
+    background-color: red;
+    display: inline-block;
+    text-align: center;
+    padding: 3px 6px;
+    height: 1rem;
+    border-radius: 0.5rem;
+    margin: 0 0 0 6px;
+    line-height: 1rem;
+}
